Bug 112442 - macOS: The language drop-down list in the character dialog contains a lot of entries in brackets (for example {en-BR})
Summary: macOS: The language drop-down list in the character dialog contains a lot of ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.1.2 release
Hardware: All macOS (All)
: high major
Assignee: How can I remove my account?
URL:
Whiteboard: target:6.1.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-09-17 11:49 UTC by Telesto
Modified: 2018-05-18 08:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (203.42 KB, image/jpeg)
2017-09-17 11:50 UTC, Telesto
Details
Screenshot of system LibreOffice on Fedora 28 (686.74 KB, image/png)
2018-05-17 08:08 UTC, How can I remove my account?
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-09-17 11:49:08 UTC
Description:
The language drop-down list in the character dialog contains a lot of entry between brackets (for example {en-BR} (MacOS)

Steps to Reproduce:
1. Open Writer
2. Format -> Character dialog -> Font Tab
3. Expand Language dropdown box (and scroll up to top)

Actual Results:  
The language list box in the character dialog contains a lot of entry between brackets (for example {EN-BR}

Expected Results:
Only a few (like on Windows)


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: e038dfdf05096edc0e9c38c9a686b5d23ba39352
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2017-09-14_23:35:41
Locale: nl-NL (nl_NL.UTF-8); Calc: group



User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2017-09-17 11:50:26 UTC
Created attachment 136297 [details]
Screenshot
Comment 2 Alex Thurgood 2017-09-18 06:39:45 UTC
Confirming in production release

Version: 5.4.1.2
Build ID: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: group
Comment 3 Alex Thurgood 2017-09-18 06:40:09 UTC
@cloph: any ideas
Comment 4 Alex Thurgood 2017-09-18 06:43:23 UTC
Not present in

Version: 5.3.6.1
Build ID: 686f202eff87ef707079aeb7f485847613344eb7
Threads CPU : 4; Version de l'OS :Mac OS X 10.12.6; UI Render : par défaut; Moteur de mise en page : nouveau; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 5 How can I remove my account? 2018-05-17 07:38:26 UTC
Confirmed in LibreOffice Vanilla 6.0.3
Comment 6 How can I remove my account? 2018-05-17 08:08:31 UTC
Created attachment 142145 [details]
Screenshot of system LibreOffice on Fedora 28

This is not macOS-specific. Even the system LibreOffice 6.0.3.2 on Fedora 28 has the same.
Comment 7 Caolán McNamara 2018-05-17 08:19:44 UTC
The (smaller) list of ones in Fedora 28 is because there are spelling dictionaries for those additional languages in /usr/share/myspell e.g. /usr/share/myspell/en_SG.dic

The list shown on Mac is much bigger, but I imagine there is some similar reason, claimed spelling support for those languages, maybe lingucomponent/source/spellcheck/macosxspell is relevant
Comment 8 How can I remove my account? 2018-05-17 08:30:52 UTC
(Changing back to be Mac-specific; the root cause is very likely different on macOS and Linux.)
Comment 9 How can I remove my account? 2018-05-17 09:47:04 UTC
Suggested fix at: https://gerrit.libreoffice.org/#/c/54476/

Works for me.
Comment 10 Commit Notification 2018-05-18 07:17:52 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=69c8e9a0607e9a197dfff8139f2ca14c2538da8a

tdf#112442: Use list of available dictionaries, not available locales

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.