tdf#112442: Use list of available dictionaries, not available locales

Also, turn some specific overly generic languages that LO doesn't
recognize in this context into the country-specific ones that the
dictionary (probably) is for. Skip some odd locales LO doesn't know in
this context. In particular, what the system calls the "en" dictionary
is for "en_US", and "nb" is for "nb_NO". The "es" one probably is for
"es_ES".

Also, skip some language-country combinations that LO doesn't
recognize in this context. In partiular, "en_JP" and "en_SG".

Change-Id: I29450775a263bdc03fd43849380f66e6ffffd09b